<resources>
    <string name="app_name">Islamyat</string>
    <string name="title_home">الرئيسية</string>
    <string name="title_quran">القرآن</string>
    <string name="title_zekr">الأذكار</string>
    <string name="title_more">المزيد</string>
    <string name="title_sebha">السبحة</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="current_date">June, 2016</string>
    <string name="add_event">ADD CALENDAR EVENT</string>
    <string name="sun">الأحد</string>
    <string name="mon">الاثنين</string>
    <string name="tue">الثلاثاء</string>
    <string name="wed">الأربعاء</string>
    <string name="thu">الخميس</string>
    <string name="fri">الجمعة</string>
    <string name="sat">السبت</string>
    <string name="last_date">30</string>

    <string name="action_settings">Settings</string>
    <string name="compass_dial" translatable="false">Compass Dial</string>
    <string name="compass_hands" translatable="false">Compass Hands</string>
    <string name="gps_settings_title">GPS settings</string>
    <string name="gps_settings_text">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="settings_button_ok">Settings</string>
    <string name="settings_button_cancel">Cancel</string>
    <string name="msg_permission_not_granted_yet">Location access not available yet</string>
    <string name="msg_permission_granted">Location Access Granted, press GPS button now.</string>
    <string name="toast_permission_required">This app requires Access Location</string>
    <string name="your_location">Your Location:</string>
    <string name="location_not_ready">Location not ready, please press button again.</string>
    <string name="qibla_direction">Kaaba Direction:</string>
    <string name="pls_enable_location">Please turn on Location and press the button again.</string>
    <string name="degree_from_north">degrees from the north.</string>
    <string name="using_last_location">using last location.</string>
    <string name="title_activity_alarm">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>